crates/xlate/tests/snapshots/golden_matrix__json_schema__chat_to_responses__gpt6.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "gpt-6-astra",
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "Extract the person."
        }
      ]
    }
  ],
  "text": {
    "format": {
      "type": "json_schema",
      "name": "person",
      "description": "A person record",
      "schema": {
        "type": "object",
        "properties": {
          "name": {
            "type": "string"
          },
          "age": {
            "type": "integer"
          }
        },
        "required": [
          "name",
          "age"
        ],
        "additionalProperties": false
      },
      "strict": true
    }
  }
}
--- headers ---
content-type: application/json
upstream_streams: false
--- degraded ---
